views/css/front.css
/* ... */
.younitedpay-widget-root progress {
    vertical-align: baseline
}

.younitedpay-widget-root textarea {
    overflow: auto
}

.younitedpay-widget-root [type=number]::-webkit-inner-spin-button,
.younitedpay-widget-root [type=number]::-webkit-outer-spin-button {
    height: auto
}

.younitedpay-widget-root ::-webkit-file-upload-button {
    -webkit-appearance: button;
    font: inherit
}

.younitedpay-widget-root details {
    display: block
}

.younitedpay-widget-root summary {
    display: list-item
}

.younitedpay-widget-root template {
    display: none
}

.younitedpay-widget-root blockquote,
.younitedpay-widget-root dd,
.younitedpay-widget-root dl,
.younitedpay-widget-root figure,
.younitedpay-widget-root h1,
.younitedpay-widget-root h2,
.younitedpay-widget-root h3,
.yp-h4,
.younitedpay-widget-root h5,
.younitedpay-widget-root h6,
.younitedpay-widget-root hr,
.younitedpay-widget-root p,
.younitedpay-widget-root pre {
    margin: 0
}

.younitedpay-widget-root button {
    background-color: transparent;
    background-image: none
}

.younitedpay-widget-root button:focus {
    outline: 1px dotted;
    outline: 5px auto -webkit-focus-ring-color
}

.yp-right .younited_btnhide {    
    padding: 10px 12px !important;
    border-radius: 4px;
    border: 1px solid #1C1C1C;
    background: #1C1C1C;
    color: white;
    font-size: 16px;
}

.younitedpay-widget-root fieldset {
    margin: 0;
    padding: 0
}

.younitedpay-widget-root ol,
.younitedpay-widget-root ul {
    list-style: none;
    margin: 0;
    padding: 0
}

.younitedpay-widget-root html {    
    line-height: 1.5
}

.younitedpay-widget-root *,
.younitedpay-widget-root :after,
.younitedpay-widget-root :before {
    box-sizing: border-box;
    border: 0 solid #e2e8f0
}

.younitedpay-widget-root hr {
    border-top-width: 1px
}

.younitedpay-widget-root img {
    border-style: solid
}

.younitedpay-widget-root textarea {
    resize: vertical
}

.younitedpay-widget-root input:-ms-input-placeholder,
.younitedpay-widget-root textarea:-ms-input-placeholder {
    color: #a0aec0
}

.younitedpay-widget-root input::-moz-placeholder,
.younitedpay-widget-root textarea::-moz-placeholder {
    color: #a0aec0
}

.younitedpay-widget-root input::placeholder,
.younitedpay-widget-root textarea::placeholder {
    color: #a0aec0
}

.younitedpay-widget-root button {
    cursor: pointer
}

.younitedpay-widget-root table {
    border-collapse: collapse
}

.yp-h4 {
    font-size: 1.125rem;
    font-weight:700;
}

.younitedpay-widget-root h1,
.younitedpay-widget-root h2,
.younitedpay-widget-root h3,
.younitedpay-widget-root h5,
.younitedpay-widget-root h6 {
    font-size: inherit;
    font-weight: inherit
}

.younitedpay-widget-root a {
    color: inherit;
    text-decoration: inherit
}

.younitedpay-widget-root button,
.younitedpay-widget-root input,
.younitedpay-widget-root optgroup,
.younitedpay-widget-root select,
.younitedpay-widget-root textarea {
    padding: 0;
    line-height: inherit;
    color: inherit
}

.younitedpay-widget-root code,
.younitedpay-widget-root kbd,
.younitedpay-widget-root pre,
.younitedpay-widget-root samp {
    font-family: Menlo, Monaco, Consolas, Liberation Mono, Courier New, monospace
}

.younitedpay-widget-root audio,
.younitedpay-widget-root canvas,
.younitedpay-widget-root embed,
.younitedpay-widget-root iframe,
.younitedpay-widget-root img,
.younitedpay-widget-root object,
.younitedpay-widget-root svg,
.younitedpay-widget-root video {
    display: block;
    vertical-align: middle
}

.younitedpay-widget-root img,
.younitedpay-widget-root video {
    max-width: 100%;
    height: auto
}

.younitedpay-widget-root * {
    -webkit-font-smoothing: antialiased !important;
    -moz-osx-font-smoothing: grayscale !important;
    -webkit-text-size-adjust: 100% !important;
    line-height: normal !important;
    margin: 0 !important;
    padding: 0 !important;
    letter-spacing: normal;
    font-family: Roboto, sans-serif;
}

.younitedpay-widget-root button:focus,
.younitedpay-widget-root button:hover,
.younitedpay-widget-root input[type=button]:focus,
.younitedpay-widget-root input[type=button]:hover {
    text-decoration: none
}

.yp-space-x-1>:not(template)~:not(template) {
    --space-x-reverse: 0 !important;
    margin-right: calc(4px*var(--space-x-reverse)) !important;
    margin-left: calc(4px*(1 - var(--space-x-reverse))) !important
}

.yp-space-y-2>:not(template)~:not(template) {
    --space-y-reverse: 0 !important;
    margin-top: calc(8px*(1 - var(--space-y-reverse))) !important;
    margin-bottom: calc(8px*var(--space-y-reverse)) !important
}

.yp-space-x-3>:not(template)~:not(template) {
    --space-x-reverse: 0 !important;
    margin-right: calc(12px*var(--space-x-reverse)) !important;
    margin-left: calc(12px*(1 - var(--space-x-reverse))) !important
}

.yp-space-y-4>:not(template)~:not(template) {
    --space-y-reverse: 0 !important;
    margin-top: calc(16px*(1 - var(--space-y-reverse))) !important;
    margin-bottom: calc(16px*var(--space-y-reverse)) !important
}

.yp-bg-black {
    --bg-opacity: 1 !important;
    background-color: #000 !important;
    background-color: rgba(0, 0, 0, var(--bg-opacity)) !important
}

.yp-bg-white {
    --bg-opacity: 1 !important;
    background-color: #fff !important;
    background-color: rgba(255, 255, 255, var(--bg-opacity)) !important
}

.yp-bg-red {
    --bg-opacity: 1 !important;
    background-color: #ff414d !important;
    background-color: rgba(255, 65, 77, var(--bg-opacity)) !important
}

.yp-bg-orange-900 {
    --bg-opacity: 1 !important;
    background-color: #9c4221 !important;
    background-color: rgba(156, 66, 33, var(--bg-opacity)) !important
}

.yp-bg-blue {
    --bg-opacity: 1 !important;
    background-color: #00425e !important;
    background-color: rgba(0, 66, 94, var(--bg-opacity)) !important
}

.yp-bg-beige {
    --bg-opacity: 1 !important;
    background-color: #fff7f0 !important;
    background-color: rgba(255, 247, 240, var(--bg-opacity)) !important
}
/* ... */

